# suggest

./: Cargo.toml  LICENSE  README.md  wapm.toml
.github/: dependabot.yml
.github/workflows/: auto-release.yml  rust.yml
examples/: full.rs  simple.rs
src/: lib.rs  main.rs
suggestion/: Cargo.toml  README.md
suggestion/src/: lib.rs
