[package]
name = "suggest"
version = "0.4.0"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "A minimal library & CLI tool to provide similar name suggestions like \"Did you mean?\""
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/suggest/"
homepage = "https://github.com/ken-matsui/suggest#readme"
documentation = "https://docs.rs/suggest"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lev_distance = "0.1.1"
