[package]
name = "suggestion"
version = "0.3.0"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "A minimal library for similar name suggestions to provide helps like \"Did you mean?\""
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/suggestion/tree/main/suggestion/"
homepage = "https://github.com/ken-matsui/suggestion/tree/main/suggestion#readme"
documentation = "https://docs.rs/suggestion"

[dependencies]
lev_distance = "0.1.1"
